--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@
     color: rgba(39, 39, 39, 0.60);
     font-size: 18px;
 }
+.banner_coloum img{
+    margin-bottom: 0;
+}
 .header_top{
     display: flex;
     background: rgba(229, 84, 115, 0.10);
@@ -56,8 +59,56 @@
     font-weight: 800;
 }
 .section_dsc{
+    margin-top: 24px;
     color: rgba(39, 39, 39, 0.60);
     text-align: center;
     font-size: 18px;
     font-weight: 400;
 }
+.flower_item_info{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    gap: 24px;
+    align-items: center;
+}
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.flower_item1{
+
+    padding-top: 110px;
+    width: 464px;
+    height: 538px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(167, 33, 98, 0.15);
+}
+.flower_item2{
+    padding-top: 110px;
+    width: 464px;
+    height: 538px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(5, 151, 160, 0.15);
+}
+.flower_item3{
+    width: 464px;
+    height: 538px;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(71, 125, 17, 0.15);
+}
+.flower_item_info img{
+    width: 100%;
+    height: 100%;
+}
+.flower_item_info p{
+    text-align: center;
+    margin-top: 32px;
+    color: #272727;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 35px;
+    text-decoration: underline;
+}
+
+
