--- a/css/style.css
+++ b/css/style.css
@@ -113,15 +113,12 @@ main{
 }
 
 .container_2{
-    /* padding: 100px 100px ; */
     width: 100%;
     border-radius: 8px;
     background: rgba(39, 39, 39, 0.05);
     margin-top: 150px;
-    margin-bottom: 500px;
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */
     
 }
 .delevery_part p{
@@ -140,3 +137,34 @@ main{
     text-align: center;
     padding:70px 40px  ;
 }
+
+.sells_part{
+    margin-bottom: 500px;
+    text-align: center;
+    align-items: center;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 130px;
+    border-radius: 8px;
+    background: rgba(229, 84, 115, 0.05);
+}
+.sells_coloum h2{
+    color: #272727;
+    font-size: 40px;
+    font-weight: 800;
+}
+.sells_coloum p{
+    margin-top: 30px;
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 30px;
+}
+
+
+
+
+
