--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ main{
 }
 
 .sells_part{
-    margin-bottom: 500px;
+    padding: 50px 0;
     text-align: center;
     align-items: center;
     width: 100%;
@@ -165,6 +165,14 @@ main{
 }
 
 
-
+.instagram_section{
+    display: flex;
+    gap: 15px;
+    margin-top: 40px;
+}
+.instagram_images img{
+    width: 270px;
+    height: 396px;
+}
 
 
